--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 </head>
 <body>
     <div id="main-screen">
-        <h1>Digite o código secreto</h1>
+        <h1>NAO DIVULGUIE ESSE SITE!</h1>
     </div>
 
     <script>
         let inputSequence = '';
-        const secretCode = 'zanp';
-        const redirectUrl = 'https://www.exemplo.com';
+        const secretCode = 'zanp_neverdies';
+        const redirectUrl = 'https://zanp.kozow.com;
 
         document.addEventListener('keydown', function(event) {
             inputSequence += event.key.toLowerCase();
