--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <script>
         let inputSequence = '';
-        const secretCode = 'zanp_neverdies';
+        const secretCode = 'zanp';
         const redirectUrl = 'https://zanp.kozow.com;
 
         document.addEventListener('keydown', function(event) {
